--- a/example.html
+++ b/example.html
@@ -10,6 +10,12 @@
             margin: 0;
             background-color: black;
         }
+        canvas {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%,-50%);
+        }
     </style>
 </head>
 <body>
